* NMI: Update supported countries list [jcreiff] #4931
* Adyen: Add mcc field [jcreiff] #4926
* Quickbooks: Remove raise OAuth from extract_response_body_or_raise [almalee24] #4935
* Cecabank: Add new Cecabank gateway to use the JSON REST API [sinourain] #4920
* Cecabank: Add 3DS Global to Cecabank REST JSON gateway [sinourain] #4940
* Cecabank: Add scrub implementation [sinourain] #4945

== Version 1.135.0 (August 24, 2023)
* PaymentExpress: Correct endpoints [steveh] #4827
* Adyen: Add option to elect which error message [aenand] #4843
* Reach: Update list of supported countries [jcreiff] #4842
* Paysafe: Truncate address fields [jcreiff] #4841
* Braintree: Support third party Network Tokens [aenand] #4775
* Kushki: Fix add amount default method for subtotalIva and subtotalIva0 [yunnydang] #4845
* Rapyd: Add customer object to requests [aenand] #4838
* CyberSource: Add merchant_id [almalee24] #4844
* Global Collect: Add agent numeric code and house number field [yunnydang] #4847
* Deepstack: Add Deepstack Gateway [khoinguyendeepstack] #4830
* Braintree: Additional tests for credit transactions [jcreiff] #4848
* Rapyd: Change nesting of description, statement_descriptor, complete_payment_url, and error_payment_url [jcreiff] #4849
* Rapyd: Add merchant_reference_id [jcreiff] #4858
* Braintree: Return error for ACH on credit [jcreiff] #4859
* Rapyd: Update handling of ewallet and billing address phone [jcreiff] #4863
* IPG: Change credentials inputs to use a combined store and user ID string as the user ID input [kylene-spreedly] #4854
* Braintree Blue: Update the credit card details transaction hash [yunnydang] #4865
* VisaNet Peru: Update generate_purchase_number_stamp [almalee24] #4855
* Braintree: Add sca_exemption [almalee24] #4864
* Ebanx: Update Verify [almalee24] #4866

== Version 1.134.0 (July 25, 2023)
* Update required Ruby version [almalee24] #4823
* Kushki: Enable 3ds2 [jherreraa] #4832

== Version 1.133.0 (July 20, 2023)